--- a/src/app/courses.component.html
+++ b/src/app/courses.component.html
@@ -1,6 +1,6 @@
-<!-- <p>courses</p>
+ <p>course page loaded</p>
 
-<div *ngIf="courses.length>0;then course else nocourse"></div>
+<!--<div *ngIf="courses.length>0;then course else nocourse"></div>
     
 <ng-template #course>
      List Courses
@@ -52,20 +52,20 @@
 <!-- <div *ngIf="courses.length==0">
    
 </div> -->
-<div class="container">
+<!-- <div class="container">
     <span>{{courses.title | uppercase}}</span><br>
 <span>{{courses.student| number}}</span><br>
 <span>{{courses.rating | number:'2.1-1' }}</span><br>
 <span>{{courses.price | currency:'INR'}}</span><br>
 <span>{{courses.relaseDate | date:'shortDate'}}</span><br>
 <span >{{pipeEx | summary:10}}</span>
-</div>
+</div> -->
 
-<input type="text" [(ngModel)]="searchtext">
-<app-highlight [searchString]="searchtext" [searchvalue]="value"></app-highlight>
+<!-- <input type="text" [(ngModel)]="searchtext"> -->
+<!-- <app-highlight [searchString]="searchtext" [searchvalue]="value"></app-highlight> -->
 <!-- {{value}} -->
 
-<div class="card">
+<!-- <div class="card">
     <div class="card-header">
         <ng-content select=".header">
 
@@ -76,4 +76,4 @@
 
         </ng-content>
     </div>
-</div>
+</div> -->
